add swagger controller to hand back a template to the UI. Use spinner while that loading of initial data is in progress
